dist/longhorn-system/Ingress.longhorn-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: longhorn-ui
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.cmdcentral.xyz
      secretName: longhorn-tls
